add power infusion updates

--- a/general_website/templates/general_website/chart_information/disclaimers/power_infusion.html
+++ b/general_website/templates/general_website/chart_information/disclaimers/power_infusion.html
@@ -3,3 +3,5 @@
         about this in the <a
             href="https://github.com/simulationcraft/simc/wiki/ActionLists#external-buffs">SimulationCraft Wiki</a>.</p>
 </div>
+
+<p>Please note, that specs that support Power Infusion in their APL do so without regarding the Priests own needs.</p>
