--- a/general_website/templates/general_website/layout/nav_top.html
+++ b/general_website/templates/general_website/layout/nav_top.html
@@ -17,7 +17,10 @@
         <div class="collapse navbar-collapse" id="navbarTopMenu">
 
             <ul class="navbar-nav mr-auto">
-                <a class="nav-link" href="{% url 'chart_windfury_totem' %}">🌪️{% translate "Windfury Totem" %}🌪️</a>
+                <a class="nav-link" href="{% url 'chart_windfury_totem' %}"><span style="color:aqua">🌪️</span>
+                    {% translate "Windfury Totem" %}</a>
+                <a class="nav-link" href="{% url 'chart_power_infusion' %}"><span style="color:aqua">🌞</span>
+                    {% translate "Power Infusion" %}</a>
                 <!-- <li class="nav-item">
                     <a class="nav-link" href="{% url 'tears' %}">{% translate "Meme" %}</a>
                 </li> -->
