add weapon enchantments

--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -221,7 +221,7 @@
     <div id="secondary_distributions-selector-area" hidden></div>
     <div id="value_style_switch" class="form-group form-check text-right" hidden>
         <input type="checkbox" class="form-check-input" id="absolute_values">
-        <label class="form-check-label text-muted" for="absolute_values">{% translate "Use absolute values" %}</label>
+        <label class="form-check-label" for="absolute_values">{% translate "Use absolute values" %}</label>
     </div>
 </div>
 
