--- a/general_website/templates/general_website/chart_information/disclaimers/power_infusion.html
+++ b/general_website/templates/general_website/chart_information/disclaimers/power_infusion.html
@@ -4,4 +4,17 @@
             href="https://github.com/simulationcraft/simc/wiki/ActionLists#external-buffs">SimulationCraft Wiki</a>.</p>
 </div>
 
-<p>Please note, that specs that support Power Infusion in their APL do so without regarding the Priests own needs.</p>
+<ul>
+    <li>
+        Please note, that specs that support Power Infusion in their APL do so without regarding the Priests own needs.
+    </li>
+    <li>
+        Data is generated with Bloodlust.
+    </li>
+    <li>
+        Power Infusion is available for use in simulation on pull.
+    </li>
+    <li>
+        Power Infusion becomes available on CD (2 minutes) afterwards.
+    </li>
+</ul>
