fix jewel spelling error. damn you German

--- a/general_website/templates/general_website/chart_information/disclaimers/trinkets.html
+++ b/general_website/templates/general_website/chart_information/disclaimers/trinkets.html
@@ -1,5 +1,5 @@
 <div class="alert alert-warning" role="alert">
-    <p>Juwelcrafting Trinkets "Idol of the [...]" depend on the number and type of gems used in your sockets. Therefore
+    <p>Jewelcrafting Trinkets "Idol of the [...]" depend on the number and type of gems used in your sockets. Therefore
         their value can vastly differ to what you see here. To check their worth for your character generate your own
         custom chart by becoming a patron, or simulate your character yourself.</p>
 </div>
