make power infusion a link

--- a/general_website/templates/general_website/chart_information/disclaimers/power_infusion.html
+++ b/general_website/templates/general_website/chart_information/disclaimers/power_infusion.html
@@ -1,20 +1,24 @@
 <div class="alert alert-danger" role="alert">
-    <p>Power Infusion is supported by only a few specs. Please help improving APL support for this feature. Read more
+    <p><a href="https://www.wowhead.com/spell=10060/power-infusion">Power Infusion</a> is supported by only a few specs.
+        Please help improving APL support for this feature. Read more
         about this in the <a
             href="https://github.com/simulationcraft/simc/wiki/ActionLists#external-buffs">SimulationCraft Wiki</a>.</p>
 </div>
 
 <ul>
     <li>
-        Please note, that specs that support Power Infusion in their APL do so without regarding the Priests own needs.
+        Please note, that specs that support <a href="https://www.wowhead.com/spell=10060/power-infusion">Power
+            Infusion</a> in their APL do so without regarding the Priests own needs.
     </li>
     <li>
         Data is generated with Bloodlust.
     </li>
     <li>
-        Power Infusion is available for use in simulation on pull.
+        <a href="https://www.wowhead.com/spell=10060/power-infusion">Power Infusion</a> is available for use in
+        simulation on pull.
     </li>
     <li>
-        Power Infusion becomes available on CD (2 minutes) afterwards.
+        <a href="https://www.wowhead.com/spell=10060/power-infusion">Power Infusion</a> becomes available on CD (2
+        minutes) afterwards.
     </li>
 </ul>
