--- a/general_website/templates/general_website/chart_information/simulation_type/power_infusion.html
+++ b/general_website/templates/general_website/chart_information/simulation_type/power_infusion.html
@@ -1,11 +1,13 @@
 {% load i18n %}
 <h5>Power Infusion</h5>
 <p>
-    This chart shows how much power each spec gains from getting access to one Power Infusion cast by a Priest in their
+    This chart shows how much power each spec gains from getting access to one <a
+        href="https://www.wowhead.com/spell=10060/power-infusion">Power Infusion</a> cast by a Priest in their
     group.
 </p>
 <p>
-    ATTENTION: APL support for Power Infusion is not wide spread. Please submit improvements to the Action Priority
+    ATTENTION: APL support for <a href="https://www.wowhead.com/spell=10060/power-infusion">Power Infusion</a> is not
+    wide spread. Please submit improvements to the Action Priority
     List (APL) in SimulationCraft.
 </p>
 <p>
@@ -31,9 +33,6 @@ actions+=/invoke_external_buff,name=power_infusion,if=buff.dancing_rune_weapon.u
 </p>
 
 <h5>When to use</h5>
-<p>
-    The below explanation reflects what is implemented in the SimulationCraft Action Priority List.
-</p>
 
 <!-- auto generated power infusion section start -->
 <table class="table">
@@ -48,157 +47,157 @@ actions+=/invoke_external_buff,name=power_infusion,if=buff.dancing_rune_weapon.u
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Death_Knight_Blood.simc">Blood Death Knight</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Death_Knight_Frost.simc">Frost Death Knight</a></th>
             <td>When using 'external_buffs.pool', will use this lines logic to determine when to use Power Infusion.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Death_Knight_Unholy.simc">Unholy Death Knight</a></th>
             <td>When using 'external_buffs.pool', will use this lines logic to determine when to use Power Infusion.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Demon_Hunter_Havoc.simc">Havoc Demon Hunter</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Demon_Hunter_Vengeance.simc">Vengeance Demon Hunter</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Druid_Balance.simc">Balance Druid</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Druid_Feral.simc">Feral Druid</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Druid_Guardian.simc">Guardian Druid</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Evoker_Devastation.simc">Devastation Evoker</a></th>
             <td>Invoke External Power Infusions if they're available during dragonrage</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Hunter_Beast_Mastery.simc">Beast_Mastery Hunter</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Hunter_Marksmanship.simc">Marksmanship Hunter</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Hunter_Survival.simc">Survival Hunter</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Mage_Arcane.simc">Arcane Mage</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Mage_Fire.simc">Fire Mage</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Mage_Frost.simc">Frost Mage</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Monk_Brewmaster.simc">Brewmaster Monk</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Monk_Windwalker.simc">Windwalker Monk</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Paladin_Protection.simc">Protection Paladin</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Paladin_Retribution.simc">Retribution Paladin</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Priest_Shadow.simc">Shadow Priest</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Rogue_Assassination.simc">Assassination Rogue</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Rogue_Outlaw.simc">Outlaw Rogue</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Rogue_Subtlety.simc">Subtlety Rogue</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Shaman_Elemental.simc">Elemental Shaman</a></th>
             <td>Link Power Infusion to Ascendance.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Shaman_Enhancement.simc">Enhancement Shaman</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warlock_Affliction.simc">Affliction Warlock</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warlock_Demonology.simc">Demonology Warlock</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warlock_Destruction.simc">Destruction Warlock</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warrior_Arms.simc">Arms Warrior</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warrior_Fury.simc">Fury Warrior</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warrior_Protection.simc">Protection Warrior</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/391182dafe92cf1e754d30d57653ac14e384883c">#391182da</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/44423179b2507909dba103c5c3f4d970ace8e944">#44423179</a></td>
         </tr>
     </tbody>
 </table>
@@ -207,5 +206,6 @@ actions+=/invoke_external_buff,name=power_infusion,if=buff.dancing_rune_weapon.u
 <p>
     The above information was extracted from SimulationCraft APL comments. Add a comment to the <a
         href="https://github.com/simulationcraft/simc/wiki/ActionLists#external-buffs">external cooldown</a>
-    Power Infusion line to enable your explanation to appear here.
+    <a href="https://www.wowhead.com/spell=10060/power-infusion">Power Infusion</a> line to enable your explanation to
+    appear here.
 </p>
