--- a/general_website/templates/general_website/chart_information/simulation_type/power_infusion.html
+++ b/general_website/templates/general_website/chart_information/simulation_type/power_infusion.html
@@ -47,157 +47,157 @@ actions+=/invoke_external_buff,name=power_infusion,if=buff.dancing_rune_weapon.u
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Death_Knight_Blood.simc">Blood Death Knight</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Death_Knight_Frost.simc">Frost Death Knight</a></th>
             <td>When using 'external_buffs.pool', will use this lines logic to determine when to use Power Infusion.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Death_Knight_Unholy.simc">Unholy Death Knight</a></th>
             <td>When using 'external_buffs.pool', will use this lines logic to determine when to use Power Infusion.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Demon_Hunter_Havoc.simc">Havoc Demon Hunter</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Demon_Hunter_Vengeance.simc">Vengeance Demon Hunter</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Druid_Balance.simc">Balance Druid</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Druid_Feral.simc">Feral Druid</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Druid_Guardian.simc">Guardian Druid</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Evoker_Devastation.simc">Devastation Evoker</a></th>
             <td>Invoke External Power Infusions if they're available during dragonrage</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Hunter_Beast_Mastery.simc">Beast_Mastery Hunter</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Hunter_Marksmanship.simc">Marksmanship Hunter</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Hunter_Survival.simc">Survival Hunter</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Mage_Arcane.simc">Arcane Mage</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Mage_Fire.simc">Fire Mage</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Mage_Frost.simc">Frost Mage</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Monk_Brewmaster.simc">Brewmaster Monk</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Monk_Windwalker.simc">Windwalker Monk</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Paladin_Protection.simc">Protection Paladin</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Paladin_Retribution.simc">Retribution Paladin</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Priest_Shadow.simc">Shadow Priest</a></th>
-            <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>Use <a href='https://www.wowhead.com/spell=10060/power-infusion'>Power Infusion</a> while <a href='https://www.wowhead.com/spell=194249/voidform'>Voidform</a> or <a href='https://www.wowhead.com/spell=391109/dark-ascension'>Dark Ascension</a> is active. Chain directly after your own <a href='https://www.wowhead.com/spell=10060/power-infusion'>Power Infusion</a>.</td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Rogue_Assassination.simc">Assassination Rogue</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Rogue_Outlaw.simc">Outlaw Rogue</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Rogue_Subtlety.simc">Subtlety Rogue</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Shaman_Elemental.simc">Elemental Shaman</a></th>
             <td>If you've selected <a href='https://www.wowhead.com/spell=114050/ascendance'>Ascendance</a> sync <a href='https://www.wowhead.com/spell=10060/power-infusion'>Power Infusion</a> with it. Otherwise use <a href='https://www.wowhead.com/spell=10060/power-infusion'>Power Infusion</a> on Cooldown.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Shaman_Enhancement.simc">Enhancement Shaman</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warlock_Affliction.simc">Affliction Warlock</a></th>
             <td>APL support exists but an explanation text is missing.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warlock_Demonology.simc">Demonology Warlock</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warlock_Destruction.simc">Destruction Warlock</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warrior_Arms.simc">Arms Warrior</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warrior_Fury.simc">Fury Warrior</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
         <tr>
             <th scope="row"><a href="https://github.com/simulationcraft/simc/blob/dragonflight/profiles/Tier29/T29_Warrior_Protection.simc">Protection Warrior</a></th>
             <td>No APL support.</td>
-            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/1b4231e66192af8b3d2b4f13f0a2140aa24d0169">#1b4231e6</a></td>
+            <td>2023-01-11 <a href="https://github.com/simulationcraft/simc/commit/e00f2f59ed37bd7c388ae5251b3f9cd78a990924">#e00f2f59</a></td>
         </tr>
     </tbody>
 </table>
