change base colours, red is danger, orange is warning

--- a/general_website/static/general_website/css/base.scss
+++ b/general_website/static/general_website/css/base.scss
@@ -46,8 +46,8 @@ $primary: $class-color-shaman !default;
 $secondary: $light-color !default;
 $success: $class-color-monk !default;
 $info: $class-color-mage !default;
-$warning: $class-color-rogue !default;
-$danger: $class-color-druid !default;
+$warning: $class-color-druid !default;
+$danger: $class-color-death-knight !default;
 $light: $lightest-color !default;
 $dark: $dark-color !default;
 
