--- a/general_website/templates/general_website/chart.html
+++ b/general_website/templates/general_website/chart.html
@@ -233,7 +233,8 @@
     data-wow-class="{{ wow_class }}" data-wow-spec="{{ wow_spec }}" data-fight-style="{{ fight_style }}"
     data-type="{{ simulation_type }}" {% else %} data-chart-id="{{ chart_id }}" {% endif %}
     data-language="{{ LANGUAGE_CODE }}" data-entries="10000" data-background-color="transparent"
-    data-value-style="{% if windfury or power_infusion %}absolute{% else %}relative{% endif %}"></div>
+    data-value-style="{% if windfury or power_infusion %}absolute{% else %}relative{% endif %}" data-loaded-data="">
+</div>
 
 {% if additional_fight_styles %}
 {% for fight_style in additional_fight_styles %}
