--- a/general_website/templates/general_website/faq.html
+++ b/general_website/templates/general_website/faq.html
@@ -39,18 +39,24 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Setting</th>
-                    <th scope="col">CastingPatchwerk</th>
-                    <th scope="col">~ 3</th>
-                    <th scope="col">~ 5</th>
+                    <th scope="col">Setting (fight style)</th>
+                    <th>CastingPatchwerk</th>
+                    <th>~ 3</th>
+                    <th>~ 5</th>
                 </tr>
             </thead>
             <tbody>
                 <tr>
+                    <th scope="row">Number of permanent targets</th>
+                    <td>1</td>
+                    <td>3</td>
+                    <td>5</td>
+                </tr>
+                <tr>
                     <th scope="row">Profile/Tier</th>
-                    <td>T29 (Vault of the Incarnates)</td>
-                    <td>T29 (Vault of the Incarnates)</td>
-                    <td>T29 (Vault of the Incarnates)</td>
+                    <td>T30 (Aberrus)</td>
+                    <td>T30 (Aberrus)</td>
+                    <td>T30 (Aberrus)</td>
                 </tr>
                 <tr>
                     <th scope="row">Iterations</th>
@@ -156,10 +162,7 @@
                 Discord invite to <a href="https://discord.gg/PKT2PWGB6w">bloodmallet</a>
             </li>
             <li>
-                Discord user <code>Bloodmallet(EU)#8246</code>
-            </li>
-            <li>
-                Twitter <a href="https://twitter.com/bloodmallet">@bloodmallet</a>
+                Discord user <code>bloodmallet</code>
             </li>
             <li>
                 Patreon <a href="https://www.patreon.com/bloodmallet">Bloodmallet(EU)</a>
