--- a/general_website/templates/general_website/layout/script_importer.html
+++ b/general_website/templates/general_website/layout/script_importer.html
@@ -10,9 +10,9 @@
 <script src="{% static 'general_website/js/top_nav_fix.js' %}"></script>
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-102757416-2"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZY1VR9VNGE"></script>
 <script>
-    let GA_ID = 'UA-102757416-2';
+    let GA_ID = 'G-ZY1VR9VNGE';
     // Show info box if ga-disable cookie was not set
     window.onload = function () {
         if (document.cookie.indexOf('ga-disable-' + GA_ID) === -1) {
