uder wowhead style override

--- a/general_website/templates/general_website/bm_charts.html
+++ b/general_website/templates/general_website/bm_charts.html
@@ -23,7 +23,7 @@
 <!-- <link rel="stylesheet" href="{% static 'general_website/css/bm-tooltips.css' %}" />
 <script src="{% static 'general_website/js/bm-tooltips.js' %}"></script> -->
 
-<!-- <link rel="stylesheet" href="{% static 'general_website/css/bm-charts.css' %}" /> -->
+<link rel="stylesheet" href="{% static 'general_website/css/wowhead-tooltip-overrides.css' %}" />
 
 <script src="{% static 'general_website/js/bm-charts.js' %}"></script>
 
